# IFC-Zoo

./: CHANGELOG.md  IFC-Zoo.cabal  LICENSE  flake.nix
app/: Demo.hs  Examples.hs  Main.hs
src/Language/While/: Abstract.hs  Eval.hs  Examples.hs  Parser.hs  Pretty.hs  Property.hs  Render.hs  Secure.hs  Security.hs  Typed.hs
src/Language/While/Abstract/: Command.hs  Expr.hs  Name.hs
src/Language/While/Check/: TINI.hs  TSNI.hs
src/Language/While/Eval/: BigStep.hs  Context.hs  Env.hs  Expr.hs  SmallStep.hs  Type.hs  Value.hs
src/Language/While/Property/: Divergence.hs  LowEq.hs  TINI.hs  TSNI.hs
src/Language/While/Secure/: Flow.hs  Level.hs
src/Language/While/Typed/: Command.hs  Eq.hs  Expr.hs  TypeChecker.hs  TypeEquality.hs
src/Language/WhileIO/: Abstract.hs
src/Language/WhileIO/Eval/: SmallStep.hs
test/: Main.hs
