cabal-version:      3.4
name:               IFC-Zoo
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Julius Marozas, Erik Nilsson, Nahusenay Yifter
maintainer:         marozas.julius@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    build-depends:    base ^>=4.17.0.0
    default-language: GHC2021
    default-extensions:
        LambdaCase

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Language.While.Abstract
        Language.While.Eval
        Language.While.Eval.BigStep
        Language.While.Eval.SmallStep
        Language.While.Examples
        Language.While.Parser
        Language.While.Pretty
        Language.While.Property
        Language.While.Render
        Language.While.Secure
        Language.While.Typed
    other-modules:
        Language.While.Abstract.Command
        Language.While.Abstract.Expr
        Language.While.Abstract.Name
        Language.While.Eval.Env
        Language.While.Eval.Expr
        Language.While.Eval.Type
        Language.While.Eval.Value
        Language.While.Property.Divergence
        Language.While.Property.TINI
        Language.While.Property.TSNI
        Language.While.Secure.Flow
        Language.While.Secure.Level
        Language.While.Typed.Command
        Language.While.Typed.TypeEquality
        Language.While.Typed.Expr
        Language.While.Typed.TypeChecker
    build-depends:
        bytestring,
        text,
        prettyprinter,
        containers,
        transformers,
        mtl,
        plucky

test-suite test
    import:           common
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        IFC-Zoo,
        containers,
        tasty,
        falsify

executable IFC-Zoo
    import:           common
    main-is:          Main.hs
    default-extensions:
        NoMonomorphismRestriction
    hs-source-dirs:   app
    build-depends:
        IFC-Zoo,
        bytestring,
        containers,
        text,
        transformers,
        prettyprinter,
        either
